<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calc"
    tools:context=".MainActivity"
    style="@style/myGrid">

    <TextView
        android:id="@+id/result"
        style="@style/myTextView" />

    <Button
        style="@style/whiteButton"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/bClear"
        android:onClick="clearClick" />
    <Button
        style="@style/whiteButton"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/bClearOne"
        android:onClick="clearOneClick" />
    <Button
        style="@style/whiteButton"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/bChange"
        android:onClick="changeClick" />
    <Button
        style="@style/redButton"
        android:layout_row="2"
        android:layout_column="3"
        android:text="@string/bPercent"
        android:onClick="operationClick" />


    <Button
        style="@style/whiteButton"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/b7"
        android:onClick="buttonClick" />
    <Button
        style="@style/whiteButton"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/b8"
        android:onClick="buttonClick" />
    <Button
        style="@style/whiteButton"
        android:layout_row="3"
        android:layout_column="2"
        android:text="@string/b9"
        android:onClick="buttonClick" />
    <Button
        style="@style/redButton"
        android:layout_row="3"
        android:layout_column="3"
        android:text="@string/bDivide"
        android:onClick="operationClick" />


    <Button
        style="@style/whiteButton"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/b4"
        android:onClick="buttonClick" />
    <Button
        style="@style/whiteButton"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/b5"
        android:onClick="buttonClick" />
    <Button
        style="@style/whiteButton"
        android:layout_row="4"
        android:layout_column="2"
        android:text="@string/b6"
        android:onClick="buttonClick" />
    <Button
        style="@style/redButton"
        android:layout_row="4"
        android:layout_column="3"
        android:text="@string/bMultiply"
        android:onClick="operationClick" />


    <Button
        style="@style/whiteButton"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/b1"
        android:onClick="buttonClick" />
    <Button
        style="@style/whiteButton"
        android:layout_row="5"
        android:layout_column="1"
        android:text="@string/b2"
        android:onClick="buttonClick" />
    <Button
        style="@style/whiteButton"
        android:layout_row="5"
        android:layout_column="2"
        android:text="@string/b3"
        android:onClick="buttonClick" />
    <Button
        style="@style/redButton"
        android:layout_row="5"
        android:layout_column="3"
        android:text="@string/bPlus"
        android:onClick="operationClick" />


    <Button
        style="@style/whiteButton"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/bDot"
        android:onClick="dotClick" />
    <Button
        style="@style/whiteButton"
        android:layout_row="6"
        android:layout_column="1"
        android:text="@string/b0"
        android:onClick="zeroClick" />
    <Button
        style="@style/whiteButton"
        android:layout_row="6"
        android:layout_column="2"
        android:text="@string/bResult"
        android:onClick="resultClick" />
    <Button
        style="@style/redButton"
        android:layout_row="6"
        android:layout_column="3"
        android:text="@string/bMinus"
        android:onClick="operationClick" />
</GridLayout>
